[gd_scene load_steps=13 format=2]

[ext_resource path="res://Cenas/OpcoesIngame/opcaoIngame.gd" type="Script" id=1]
[ext_resource path="res://Elementos_Jogo/opcao-01.png" type="Texture" id=2]
[ext_resource path="res://Elementos_Jogo/slider_high.png" type="Texture" id=3]
[ext_resource path="res://Elementos_Jogo/slider_normal1.png" type="Texture" id=4]
[ext_resource path="res://Elementos_Jogo/checked.png" type="Texture" id=5]
[ext_resource path="res://Elementos_Jogo/uncheck.png" type="Texture" id=6]
[ext_resource path="res://Fonts/RobotoSlab-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = true
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border Width", "Corner Radius" ]

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.425781, 0.425781, 0.425781, 1 )
draw_center = true
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.472656, 0.452347, 0.452347, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width" ]

[sub_resource type="DynamicFont" id=3]

size = 14
use_mipmaps = false
use_filter = false
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 14
use_mipmaps = false
use_filter = true
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="opcao" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="fundoOp" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Efeitos" type="HSlider" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 508.0
margin_top = 353.0
margin_right = 803.0
margin_bottom = 369.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_highlight = SubResource( 2 )
min_value = -20.0
max_value = 24.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "custom_icons", "custom_styles" ]

[node name="Ambientacao" type="HSlider" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 508.0
margin_top = 449.0
margin_right = 803.0
margin_bottom = 465.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_highlight = SubResource( 2 )
min_value = -20.0
max_value = 24.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "custom_icons", "custom_styles" ]

[node name="Musica" type="HSlider" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 508.0
margin_top = 546.0
margin_right = 803.0
margin_bottom = 562.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_highlight = SubResource( 2 )
min_value = -20.0
max_value = 24.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "custom_icons", "custom_styles" ]

[node name="Full_Screen" type="CheckBox" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 667.0
margin_top = 160.0
margin_right = 787.0
margin_bottom = 184.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_icons/checked = ExtResource( 5 )
custom_icons/unchecked = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Tela Cheia"
flat = false
align = 0
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="janela" type="CheckBox" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 498.0
margin_top = 160.0
margin_right = 618.0
margin_bottom = 184.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_icons/checked = ExtResource( 5 )
custom_icons/unchecked = ExtResource( 6 )
custom_fonts/font = SubResource( 4 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Janela"
flat = false
align = 0
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="Control tamanho da tela" type="Control" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 499.0
margin_top = 208.0
margin_right = 783.0
margin_bottom = 258.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="LabelTamanho" type="Label" parent="Control tamanho da tela" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 3.0
margin_right = 144.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Dimens√£o de Tela"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Labelnumero" type="Label" parent="Control tamanho da tela" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 203.0
margin_top = 22.0
margin_right = 283.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "1280 x 720"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Tamanho de Tela" type="HSlider" parent="Control tamanho da tela" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 23.0
margin_right = 190.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_highlight = SubResource( 2 )
min_value = 0.0
max_value = 3.0
step = 1.0
page = 0.0
value = 2.0
exp_edit = false
rounded = true
editable = true
tick_count = 4
ticks_on_borders = true
focus_mode = 2
_sections_unfolded = [ "Theme", "custom_icons", "custom_styles" ]

[connection signal="value_changed" from="Efeitos" to="." method="_on_Efeitos_value_changed"]

[connection signal="value_changed" from="Ambientacao" to="." method="_on_Ambientacao_value_changed"]

[connection signal="value_changed" from="Musica" to="." method="_on_Musica_value_changed"]

[connection signal="pressed" from="Full_Screen" to="." method="_on_Full_Screen_pressed"]

[connection signal="pressed" from="janela" to="." method="_on_janela_pressed"]

[connection signal="value_changed" from="Control tamanho da tela/Tamanho de Tela" to="." method="_on_Tamanho_de_Tela_value_changed"]


